--- a/index.html
+++ b/index.html
@@ -41,5 +41,17 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="button_js col-12">
+                <button id="myButton">Click me
+                </button>
+                <p id="demo">
+                </p>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="JS/button.js">
+    </script>
 </body>
 </html>
